@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+New object event for plugins: selling (object is being sold by activator).
+Nicolas Weeger 2010-01-09
+
 Plugin utility function cf_map_insert_object_around().
 Nicolas Weeger 2010-01-09
 
